package ar.edu.utn.frba.dds.consenso;

public enum TipoConsenso {
  ABSOLUTO, MAYORIA_SIMPLE, MULTIPLES_MENCIONES
}
